add options for both app and pages router

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -3,11 +3,6 @@ title: <SignIn />
 description: The <SignIn /> component renders a UI for signing in users.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<SignIn />`
 
 <Images
@@ -23,54 +18,80 @@ The `<SignIn />` component renders a UI for signing in users. The functionality 
 
 Below is basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
-```jsx copy filename="/pages/sign-in/[[...index]].tsx"
-import { SignIn } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
+  <Tab>
+    You can embed the `<SignIn />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
-const SignInPage = () => (
-  <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
-);
-export default SignInPage;
-```
-```jsx copy filename="/pages/sign-in/[[...index]].tsx"
-import { SignIn } from "@clerk/react";
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
+      import { SignIn } from "@clerk/nextjs";
 
-const SignInPage = () => (
-  <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
-);
-export default SignInPage;
-```
-```jsx copy filename="app/routes/sign-in/$.tsx"
-import { SignIn } from "@clerk/remix";
+      const SignInPage = () => (
+        <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
+      );
+      export default SignInPage;
+      ```
 
-export default function SignInPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign In route</h1>
-      <SignIn routing={"path"} path={"/sign-in"} />
-    </div>
-  );
-}
-```
-```jsx copy filename="/pages/sign-in.js"
-import { SignIn } from "gatsby-plugin-clerk";
+      ```jsx copy filename="/app/sign-in/[[...sign-in]]/page.tsx"
+      import { SignIn } from "@clerk/nextjs";
 
-export default function SignInPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign In Up route</h1>
-      <SignIn routing={"path"} path={"/sign-in"} />
-    </div>
-  );
-}
-```
-```js copy filename="sign-in.js"
-window.Clerk.mountSignIn(
-  document.getElementById("sign-in")
-);
-window.Clerk.openSignIn();
-````
-</CodeBlockTabs>
+      export default function Page() {
+        return <SignIn />;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
+    import { SignIn } from "@clerk/react";
+
+    const SignInPage = () => (
+      <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
+    );
+    export default SignInPage;
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="app/routes/sign-in/$.tsx"
+    import { SignIn } from "@clerk/remix";
+
+    export default function SignInPage() {
+      return (
+        <div style={{ border: "2px solid blue", padding: "2rem" }}>
+          <h1>Sign In route</h1>
+          <SignIn routing={"path"} path={"/sign-in"} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/sign-in.js"
+    import { SignIn } from "gatsby-plugin-clerk";
+
+    export default function SignInPage() {
+      return (
+        <div style={{ border: "2px solid blue", padding: "2rem" }}>
+          <h1>Sign In Up route</h1>
+          <SignIn routing={"path"} path={"/sign-in"} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```js copy filename="sign-in.js"
+    window.Clerk.mountSignIn(
+      document.getElementById("sign-in")
+    );
+    window.Clerk.openSignIn();
+    ```
+  </Tab>  
+</Tabs>
 
 ## Props
 
@@ -82,6 +103,13 @@ All props below are optional.
   rows={[
     {
       cells: [
+        "appearance",
+        "object",
+        "Controls the overall look and feel of the component. See [Appearance](/docs/components/ui/appearance) for more information.",
+      ]
+    },
+    {
+      cells: [
         "routing",
         "string",
         `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
@@ -91,28 +119,28 @@ All props below are optional.
       cells: [
         "path",
         "string",
-        "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
+        "The path where the component is mounted on when path-based routing is used e.g. /sign-up.",
       ],
     },
     {
       cells: [
         "redirectUrl",
         "string",
-        "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+        "Full URL or path to navigate to after successful sign in or sign up.\nThe same as setting afterSignInUrl and afterSignUpUrl to the same value.",
       ],
     },
     {
       cells: [
         "afterSignInUrl",
         "string",
-        "The full URL or path to navigate after a successful sign in.",
+        "The full URL or path to navigate to after a successful sign in.",
       ],
     },
     {
       cells: [
-        "signUpUrl",
+        "signInUrl",
         "string",
-        "Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered.",
+        "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.",
       ],
     },
     {
