--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -3,12 +3,6 @@ title: <SignUp />
 description: The <SignUp /> component renders a UI for signing up users.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<SignUp />`
 
 <Images
@@ -18,64 +12,87 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
   alt="Sign up component example"
 />
 
-The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
+The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
 
 ## Usage
 
 Below is basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
+  <Tab>
+    You can embed the `<SignUp />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
 
-```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
-import { SignUp } from "@clerk/nextjs";
+    <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out our [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
-const SignUpPage = () => (
-  <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
-);
-export default SignUpPage;
-```
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
+      import { SignUp } from "@clerk/nextjs";
 
-```jsx copy filename="sign-up.jsx"
-import { SignUp } from "@clerk/clerk-react";
+      const SignUpPage = () => (
+        <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
+      );
+      export default SignUpPage;
+      ```
 
-function SignUpPage() {
-  return <SignUp />;
-}
-```
+      ```jsx copy filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
+      import { SignUp } from "@clerk/nextjs";
 
-```jsx copy filename="app/routes/sign-up/$.tsx"
-import { SignUp } from "@clerk/remix";
+      export default function Page() {
+        return <SignUp />;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-export default function SignUpPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign Up route</h1>
-      <SignUp routing={"path"} path={"/sign-up"} />
-    </div>
-  );
-}
-```
+  <Tab>
+    ```jsx copy filename="sign-up.jsx"
+    import { SignUp } from "@clerk/clerk-react";
 
-```jsx copy filename="/pages/sign-up.js"
-import { SignUp } from "gatsby-plugin-clerk";
+    function SignUpPage() {
+      return <SignUp />;
+    }
+    ```
+    </Tab>
 
-export default function SignUpPage() {
-  return (
-    <div style={{ border: "2px solid blue", padding: "2rem" }}>
-      <h1>Sign Up route</h1>
-      <SignUp routing={"path"} path={"/sign-up"} />
-    </div>
-  );
-}
-```
+    <Tab>
+    ```jsx copy filename="app/routes/sign-up/$.tsx"
+    import { SignUp } from "@clerk/remix";
 
-```js copy filename="sign-up.js"
-window.Clerk.mountSignUp(
-  document.getElementById("sign-up")
-);
-window.Clerk.openSignUp();
-```
-</CodeBlockTabs>
+    export default function SignUpPage() {
+      return (
+        <div style={{ border: "2px solid blue", padding: "2rem" }}>
+          <h1>Sign Up route</h1>
+          <SignUp routing={"path"} path={"/sign-up"} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/sign-up.js"
+    import { SignUp } from "gatsby-plugin-clerk";
+
+    export default function SignUpPage() {
+      return (
+        <div style={{ border: "2px solid blue", padding: "2rem" }}>
+          <h1>Sign Up route</h1>
+          <SignUp routing={"path"} path={"/sign-up"} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```js copy filename="sign-up.js"
+    window.Clerk.mountSignUp(
+      document.getElementById("sign-up")
+    );
+    window.Clerk.openSignUp();
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
@@ -87,6 +104,13 @@ All props below are optional.
   rows={[
     {
       cells: [
+        "appearance",
+        "object",
+        "Controls the overall look and feel of the component. See [Appearance](/docs/components/ui/appearance) for more information.",
+      ]
+    },
+    {
+      cells: [
         "routing",
         "string",
         `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
@@ -96,21 +120,21 @@ All props below are optional.
       cells: [
         "path",
         "string",
-        "The path where the component is mounted on when path-based routing is used e.g. /sign-in.",
+        "The path where the component is mounted on when path-based routing is used e.g. /sign-up.",
       ],
     },
     {
       cells: [
         "redirectUrl",
         "string",
-        "Full URL or path to navigate after successful sign in or sign up.\n The same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+        "Full URL or path to navigate to after successful sign in or sign up.\nThe same as setting afterSignInUrl and afterSignUpUrl to the same value.",
       ],
     },
     {
       cells: [
         "afterSignInUrl",
         "string",
-        "The full URL or path to navigate after a successful sign in.",
+        "The full URL or path to navigate to after a successful sign in.",
       ],
     },
     {
