--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -17,7 +17,7 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 
 <Tabs items={['Next.js', 'React']}>
 <Tab>
-<CodeBlockTabs options={["App Directory", "Pages Directory"]}>
+<CodeBlockTabs options={["App router", "Pages router"]}>
 ```tsx copy filename="app/layout.tsx"
 import React from "react";
 import { ClerkProvider } from "@clerk/nextjs";
