--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -3,10 +3,6 @@ title: <CreateOrganization />
 description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<CreateOrganization />`
 
 <Images
@@ -20,29 +16,51 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/create-organization/[[...index]].tsx"
-import { CreateOrganization } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="/pages/create-organization/[[...index]].tsx"
+      import { CreateOrganization } from "@clerk/nextjs";
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-```jsx copy filename="/create-organization.tsx"
-import { CreateOrganization } from "@clerk/clerk-react";
+      export default function CreateOrganizationPage() {
+        return (
+            <CreateOrganization routing="path" path="/create-organization" />
+        )
+      }
+      ```
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-```jsx copy filename="/route/create-organization/$.tsx"
-import { CreateOrganization } from "@clerk/remix";
+      // TODO: App router example:
 
-export default function CreateOrganizationPage() {
-  return <CreateOrganization />;
-}
-```
-</CodeBlockTabs>
+      ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.tsx"
+      import { CreateOrganization } from "@clerk/nextjs";
+
+      export default function CreateOrganizationPage() {
+        return <CreateOrganization />;
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/create-organization.tsx"
+    import { CreateOrganization } from "@clerk/clerk-react";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/route/create-organization/$.tsx"
+    import { CreateOrganization } from "@clerk/remix";
+
+    export default function CreateOrganizationPage() {
+      return <CreateOrganization />;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
