--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -3,10 +3,6 @@ title: <OrganizationSwitcher />
 description: The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<OrganizationSwitcher />`
 
 <Images
@@ -20,41 +16,65 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
 
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
-import { OrganizationSwitcher } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    <CodeBlockTabs>
+      ```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
+      import { OrganizationSwitcher } from "@clerk/nextjs";
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-```jsx copy filename="organization-switcher.tsx"
-import { OrganizationSwitcher } from "@clerk/clerk-react";
+      export default function OrganizationSwitcherPage() {
+        return (
+          <div>
+            <OrganizationSwitcher />
+          </div>
+        );
+      }
+      ```
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-```jsx copy filename="/pages/organization-switcher/$.tsx"
-import { OrganizationSwitcher } from "@clerk/remix";
+      // TODO: App router example
 
-export default function OrganizationSwitcherPage() {
-  return (
-    <div>
-      <OrganizationSwitcher />
-    </div>
-  );
-}
-```
-</CodeBlockTabs>
+      ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.tsx"
+      import { OrganizationSwitcher } from "@clerk/nextjs";
+
+      export default function OrganizationSwitcherPage() {
+        return (
+          <div>
+            <OrganizationSwitcher />
+          </div>
+        );
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="organization-switcher.tsx"
+    import { OrganizationSwitcher } from "@clerk/clerk-react";
+
+    export default function OrganizationSwitcherPage() {
+      return (
+        <div>
+          <OrganizationSwitcher />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/pages/organization-switcher/$.tsx"
+    import { OrganizationSwitcher } from "@clerk/remix";
+
+    export default function OrganizationSwitcherPage() {
+      return (
+        <div>
+          <OrganizationSwitcher />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 
 ## Props
