--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -3,11 +3,6 @@ title: <SignOutButton />
 description: The `<SignOutButton />` component is a button that signs a user out.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<SignOutButton />`
 
 The `<SignOutButton />` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
@@ -16,125 +11,175 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 
 #### Basic Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+  <Tab>
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="pages/index.js"
+      import { SignOutButton } from "@clerk/nextjs";
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton />
-      </div>
-    );
-  }
-  ```
+      export default function Home() {
+        return (
+          <div>
+          <h1> Sign out </h1>
+            <SignOutButton />
+          </div>
+        );
+      }
+      ```
 
-  ```jsx copy filename="example.js"
-  import { SignOutButton } from "@clerk/clerk-react";
+      // TODO: App router example:
 
-  export default function Example() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton />
-      </div>
-    );
-  }
-  ```
+      ```jsx copy filename="app/index.js"
+      import { SignOutButton } from "@clerk/nextjs";
 
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "@clerk/remix";
+      export default function Home() {
+        return (
+          <div>
+          <h1> Sign out </h1>
+            <SignOutButton />
+          </div>
+        );
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton />
-      </div>
-    );
-  }
-  ```
+  <Tab>
+    ```jsx copy filename="example.js"
+    import { SignOutButton } from "@clerk/clerk-react";
 
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "gatsby-plugin-clerk";
+    export default function Example() {
+      return (
+        <div>
+        <h1> Sign out </h1>
+          <SignOutButton />
+        </div>
+      );
+    }
+    ```
+  </Tab>
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton />
-      </div>
-    );
-  }
-  ```
-</CodeBlockTabs>
+  <Tab>
+    ```jsx copy filename="pages/index.js"
+    import { SignOutButton } from "@clerk/remix";
+
+    export default function Home() {
+      return (
+        <div>
+        <h1> Sign out </h1>
+          <SignOutButton />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="pages/index.js"
+    import { SignOutButton } from "gatsby-plugin-clerk";
+
+    export default function Home() {
+      return (
+        <div>
+        <h1> Sign out </h1>
+          <SignOutButton />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 #### Custom Usage
 
-In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+You can create a custom button by wrapping your own button, or button text, in the <SignOutButton /> component.
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+  <Tab>
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="pages/index.js"
+      import { SignOutButton } from "@clerk/nextjs";
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton>
-        <button>Sign in with Clerk</button>
-        </SignOutButton>
-      </div>
-    );
-  }
-  ```
+      export default function Home() {
+        return (
+          <div>
+          <h1> Sign out </h1>
+            <SignOutButton>
+              <button>Sign in with Clerk</button>
+            </SignOutButton>
+          </div>
+        );
+      }
+      ```
 
-  ```jsx copy filename="example.js"
-  import { SignOutButton } from "@clerk/clerk-react";
+      ```jsx copy filename="app/index.js"
+      import { SignOutButton } from "@clerk/nextjs";
 
-  export default function Example() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton>
-        <button>Sign in with Clerk</button>
-        </SignOutButton>
-      </div>
-    );
-  }
-  ```
+      export default function Home() {
+        return (
+          <div>
+          <h1> Sign out </h1>
+            <SignOutButton>
+              <button>Sign in with Clerk</button>
+            </SignOutButton>
+          </div>
+        );
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "@clerk/remix";
+  <Tab>
+    ```jsx copy filename="example.js"
+    import { SignOutButton } from "@clerk/clerk-react";
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignOutButton>
-        <button>Sign in with Clerk</button>
-        </SignOutButton>
-      </div>
-    );
-  }
-  ```
+    export default function Example() {
+      return (
+        <div>
+        <h1> Sign out </h1>
+          <SignOutButton>
+            <button>Sign in with Clerk</button>
+          </SignOutButton>
+        </div>
+      );
+    }
+    ```
+  </Tab>
 
-  ```jsx copy filename="pages/index.js"
-  import { SignOutButton } from "gatsby-plugin-clerk";
+  <Tab>
+    ```jsx copy filename="pages/index.js"
+    import { SignOutButton } from "@clerk/remix";
 
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign out </h1>
-        <SignOutButton>
-        <button>Sign in with Clerk</button>
-        </SignOutButton>
-      </div>
-    );
-  }
-  ```
-</CodeBlockTabs>
+    export default function Home() {
+      return (
+        <div>
+        <h1> Sign in </h1>
+          <SignOutButton>
+            <button>Sign in with Clerk</button>
+          </SignOutButton>
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="pages/index.js"
+    import { SignOutButton } from "gatsby-plugin-clerk";
+
+    export default function Home() {
+      return (
+        <div>
+        <h1> Sign out </h1>
+          <SignOutButton>
+            <button>Sign in with Clerk</button>
+          </SignOutButton>
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
@@ -154,7 +199,7 @@ In some cases you will want to use your own button, or button text. You can do t
     },
     {
       cells: [
-        "signOutOptions?", "SignOutOptions", "Object that current has a `sessionId` property. The sessionId can be passed in to sign out a specific session, which is useful for multisession applications."
+        "signOutOptions?", "SignOutOptions", "Object that current has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications."
       ]
     }
   ]}
