--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -13,141 +13,190 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 The `<UserButton />` component is used to render the familiar user button UI popularized by Google.
 
+Clerk is the only provider with multi-session support, allowing users to sign into multiple accounts at once and switch between them. For multisession apps, the `<UserButton />` automatically supports instant account switching, without the need of a full page reload. For more information, you can check out the [Multi-session applications guide](/docs/custom-flows/multi-session-applications#overview).
+
 ## Usage
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-  ```jsx copy filename="userButtonExample.tsx"
-  import {
-    ClerkProvider,
-    SignedIn,
-    SignedOut,
-    SignInButton,
-    UserButton,
-  } from "@clerk/nextjs";
+In this example, `<UserButton />` is mounted inside a header component, which is a common pattern on many websites and applications. When the user is signed in, they will see their avatar and be able to open the popup menu.
 
-  function Header() {
-  return (
-      <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
-        <h1>My App</h1>
-        <SignedIn>
-          {/* Mount the UserButton component */}
-          <UserButton />
-        </SignedIn>
-        <SignedOut>
-          {/* Signed out users get sign in button */}
-          <SignInButton />
-        </SignedOut>
-      </header>
-  );
-  }
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="userButtonExample.tsx"
+      import {
+        ClerkProvider,
+        SignedIn,
+        SignedOut,
+        SignInButton,
+        UserButton,
+      } from "@clerk/nextjs";
 
-  function MyApp({ pageProps }) {
-    return (
-      <ClerkProvider {...pageProps}>
-        <Header />
-      </ClerkProvider>
-    );
-  }
-
-  export default MyApp;
-  ```
-
-  ```tsx filename="app.tsx" copy
-  import {
-     ClerkProvider,
-     SignedIn,
-     SignIn,
-     SignUp,
-     UserButton,
-  } from "@clerk/clerk-react";
-  import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
-
-  const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-  function PublicPage() {
+      function Header() {
       return (
-        <>
-          <h1>Public page</h1>
-          <a href="/protected">Go to protected page</a>
-        </>
+          <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
+            <h1>My App</h1>
+            <SignedIn>
+              {/* Mount the UserButton component */}
+              <UserButton />
+            </SignedIn>
+            <SignedOut>
+              {/* Signed out users get sign in button */}
+              <SignInButton />
+            </SignedOut>
+          </header>
       );
-  }
+      }
 
-  function ProtectedPage() {
-    return (
-        <>
-          <h1>Protected page</h1>
-          <UserButton />
-        </>
+      function MyApp({ pageProps }) {
+        return (
+          <ClerkProvider {...pageProps}>
+            <Header />
+          </ClerkProvider>
+        );
+      }
+
+      export default MyApp;
+      ```
+
+      // TODO: App router example:
+
+      ```jsx copy filename="userButtonExample.tsx"
+      import {
+        ClerkProvider,
+        SignedIn,
+        SignedOut,
+        SignInButton,
+        UserButton,
+      } from "@clerk/nextjs";
+
+      function Header() {
+      return (
+          <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
+            <h1>My App</h1>
+            <SignedIn>
+              {/* Mount the UserButton component */}
+              <UserButton />
+            </SignedIn>
+            <SignedOut>
+              {/* Signed out users get sign in button */}
+              <SignInButton />
+            </SignedOut>
+          </header>
       );
-  }
+      }
 
-  function ClerkProviderWithRoutes() {
-    const navigate = useNavigate();
+      function MyApp({ pageProps }) {
+        return (
+          <ClerkProvider {...pageProps}>
+            <Header />
+          </ClerkProvider>
+        );
+      }
 
-    return (
-      <ClerkProvider
-        publishableKey={clerk_pub_key}
-        navigate={(to) => navigate(to)}>
-          <Routes>
-            <Route path="/" element={<PublicPage />} />
-            <Route
-            path="/sign-in/*"
-            element={<SignIn routing="path" path="/sign-in" />}
-            />
-            <Route
-            path="/sign-up/*"
-            element={<SignUp routing="path" path="/sign-up" />}
-            />
-            <Route
-              path="/protected"
-              element={
-                <SignedIn>
-                  <ProtectedPage />
-                </SignedIn>
-              }
-            />
-          </Routes>
-        </ClerkProvider>
-      );
-  }
+      export default MyApp;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-  function App() {
-    return (
-      <BrowserRouter>
-        <ClerkProviderWithRoutes />
-      </BrowserRouter>
-    );
-  }
+  <Tab>
+    ```tsx filename="app.tsx" copy
+    import {
+      ClerkProvider,
+      SignedIn,
+      SignIn,
+      SignUp,
+      UserButton,
+    } from "@clerk/clerk-react";
+    import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
 
-  ```
+    const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
-  ```tsx filename="router/index.tsx" copy
-  import {
-    UserButton,
-  } from "@clerk/remix";
-  import { getAuth } from "@clerk/remix/ssr.server";
-  import { LoaderFunction, redirect } from "@remix-run/node";
-
-  export const loader: LoaderFunction = async (args) => {
-    const { userId } = await getAuth(args);
-    if(!userId){
-      return redirect("/sign-in");
+    function PublicPage() {
+        return (
+          <>
+            <h1>Public page</h1>
+            <a href="/protected">Go to protected page</a>
+          </>
+        );
     }
-    return {};
-  }
 
-  export default function Index() {
-    return (
-      <div>
-          <h1>Index route</h1>
-          <p>You are signed in!</p>
-          <UserButton afterSignOutUrl="/"/>
-      </div>
-    );
-  }
-  ```
-</CodeBlockTabs>
+    function ProtectedPage() {
+      return (
+          <>
+            <h1>Protected page</h1>
+            <UserButton />
+          </>
+        );
+    }
+
+    function ClerkProviderWithRoutes() {
+      const navigate = useNavigate();
+
+      return (
+        <ClerkProvider
+          publishableKey={clerk_pub_key}
+          navigate={(to) => navigate(to)}>
+            <Routes>
+              <Route path="/" element={<PublicPage />} />
+              <Route
+              path="/sign-in/*"
+              element={<SignIn routing="path" path="/sign-in" />}
+              />
+              <Route
+              path="/sign-up/*"
+              element={<SignUp routing="path" path="/sign-up" />}
+              />
+              <Route
+                path="/protected"
+                element={
+                  <SignedIn>
+                    <ProtectedPage />
+                  </SignedIn>
+                }
+              />
+            </Routes>
+          </ClerkProvider>
+        );
+    }
+
+    function App() {
+      return (
+        <BrowserRouter>
+          <ClerkProviderWithRoutes />
+        </BrowserRouter>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```tsx filename="router/index.tsx" copy
+    import {
+      UserButton,
+    } from "@clerk/remix";
+    import { getAuth } from "@clerk/remix/ssr.server";
+    import { LoaderFunction, redirect } from "@remix-run/node";
+
+    export const loader: LoaderFunction = async (args) => {
+      const { userId } = await getAuth(args);
+      if(!userId){
+        return redirect("/sign-in");
+      }
+      return {};
+    }
+
+    export default function Index() {
+      return (
+        <div>
+            <h1>Index route</h1>
+            <p>You are signed in!</p>
+            <UserButton afterSignOutUrl="/"/>
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ## Props
 
