--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -3,10 +3,6 @@ title: <UserProfile />
 description: The `<UserProfile />` component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<UserProfile />`
 
 <Images
@@ -21,33 +17,57 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 ## Usage
 
 
-<CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-```jsx copy filename="/pages/user-profile/[[...index]].tsx"
-import { UserProfile } from "@clerk/nextjs";
+<Tabs items={['Next.js', 'React', 'Remix']}>
+  <Tab>
+    You can embed the `<UserProfile />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
 
-const UserProfilePage = () => (
-  <UserProfile path="/user-profile" routing="path" />
-);
+    <CodeBlockTabs options={["Pages router", "App router"]}>
+      ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
+      import { UserProfile } from "@clerk/nextjs";
 
-export default UserProfilePage;
-```
-```jsx copy filename="/user-profile.tsx"
-import { UserProfile } from "@clerk/clerk-react";
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path" />
+      );
 
-const UserProfilePage = () => (
-  <UserProfile path="/user-profile" routing="path" />
-);
+      export default UserProfilePage;
+      ```
 
-export default UserProfilePage;
-```
-```tsx filename="routes/user/$.tsx" copy
-import { UserProfile } from "@clerk/remix";
+      // TODO: App router example:
 
-export default function UserProfilePage() {
-  return <UserProfile path="/user" routing="path" />;
-}
-```
-</CodeBlockTabs>
+      ```jsx copy filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      import { UserProfile } from "@clerk/nextjs";
+
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path" />
+      );
+
+      export default UserProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx copy filename="/user-profile.tsx"
+    import { UserProfile } from "@clerk/clerk-react";
+
+    const UserProfilePage = () => (
+      <UserProfile path="/user-profile" routing="path" />
+    );
+
+    export default UserProfilePage;
+    ```
+  </Tab>
+
+  <Tab>
+    ```tsx filename="routes/user/$.tsx" copy
+    import { UserProfile } from "@clerk/remix";
+
+    export default function UserProfilePage() {
+      return <UserProfile path="/user" routing="path" />;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 
 ## Props
